<resources>
    <string name="app_name">一塔湖图金融超市</string>

    <!-- common -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="sms_prompt_4">我知道了</string>
    <string name="submit">提交</string>
    <string name="refresh">刷新</string>
    <string name="perview">预览</string>
    <string name="beperfect">待完善</string>
    <string name="finished">已完成</string>
    <string name="select">请选择</string>
    <string name="save">保存</string>
    <string name="age">年龄</string>
    <string name="next">下一步</string>
    <string name="upgrade">立即更新</string>

    <!-- download -->
    <string name="storage_unable">手机外部存储不可用</string>
    <string name="download_text">%sAPP下载中...</string>
    <string name="download_over">%s下载完成，点击安装</string>

    <!-- main -->
    <string name="main_recommend">推荐</string>
    <string name="main_loan">贷款</string>
    <string name="main_credit">信用卡</string>
    <string name="main_mine">我的</string>

    <!-- recommend tab -->
    <string name="recommend_title">一塔湖图金融超市</string>
    <string name="recommend_loan_enterprise">企业贷款</string>
    <string name="recommend_loan_worker">上班族贷款</string>
    <string name="recommend_loan_credit">信用贷款</string>
    <string name="recommend_credit_common">普卡</string>
    <string name="recommend_credit_silver">银卡</string>
    <string name="recommend_credit_gold">金卡</string>
    <string name="main_more">更多</string>

    <!-- mine tab -->
    <string name="mine_login_regist">登录/注册</string>
    <string name="mine_loan_apply">我的贷款申请</string>
    <string name="mine_loan_info">我的融资需求书</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_share">分享给好友</string>
    <string name="mine_setup">设置</string>
    <string name="house_detail_share_wechat">微信</string>
    <string name="house_detail_share_wechat_circle">朋友圈</string>
    <string name="house_share_start">开始分享</string>
    <string name="house_share_sucess">分享成功</string>
    <string name="house_share_fail">分享失败</string>


    <!-- login -->
    <string name="login_title">登录</string>
    <string name="login_bar_regist">注册</string>
    <string name="login_pwd">密码登录</string>
    <string name="login_pwd_phone_hint">请输入手机号</string>
    <string name="login_phone">手机动态码登录</string>
    <string name="login_phone_hint">手机号码</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_click_request">点击获取</string>
    <string name="login_click_request_again">重新获取验证码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_forget_pwd">忘记密码</string>

    <!-- regist -->
    <string name="regist_title">注册</string>
    <string name="regist_phone_hint">请输入手机号</string>
    <string name="regist_nickname_hint">请输入您的昵称</string>
    <string name="regist_next">下一步</string>
    <string name="regist_request_again">重新获取验证码</string>
    <string name="regist_pwd_hint">请设置您的密码,6-20位字母和数字</string>

    <!-- forget pwd -->
    <string name="forget_title">忘记密码</string>
    <string name="forget_phone_hint">请输入手机号</string>
    <string name="forget_next">下一步</string>
    <string name="forget_tip">请输入手机号码获取短信验证码,并设置新的登录密码</string>

    <!-- about us -->
    <string name="about_us_title">关于我们</string>
    <string name="about_us_introduce">公司介绍</string>
    <string name="about_us_version">版本号</string>

    <!-- set up -->
    <string name="setup_title">设置</string>
    <string name="setup_loginout">退出当前账号</string>

    <!-- loan -->
    <string name="loan_title">贷款</string>

    <!-- loan apply -->
    <string name="loan_apply_title">我的贷款申请</string>
    <string name="loan_apply_track">申请单跟踪</string>
    <string name="loan_apply_detail_title">贷款申请详情</string>

    <!-- loan product -->
    <string name="product_detail_title">产品详情</string>

    <!-- loan verify -->
    <string name="loan_vertify_title">贷款资质审核</string>
    <string name="loan_vertify_tip">提示: 请准确提供您的信息,信息越准确,成功申请的几率越高</string>
    <string name="loan_vertify_input_age">请输入年龄</string>
    <string name="loan_vertify_house_property">房产信息</string>
    <string name="loan_vertify_house_property_position">房产位置</string>
    <string name="loan_vertify_house_property_situation">房产抵押/按揭情况</string>
    <string name="loan_vertify_car_property">车产信息</string>
    <string name="loan_vertify_car_property_license">牌照归属地</string>

    <!-- credit -->
    <string name="credit_title">信用卡</string>
    <string name="credit_detail_title">信用卡详情</string>

    <!-- credit apply verify -->
    <string name="credit_vertify_title">信用卡资质审核</string>

    <!-- financing -->
    <string name="financing_need_title">我的融资需求书</string>

    <!-- user -->
    <string name="user_base_info_title">基本信息</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_age">年龄 ( 岁 )</string>
    <string name="user_ids">身份证</string>
    <string name="user_phone">手机电话</string>
    <string name="user_province">户籍</string>
    <string name="user_city">户籍地 ( 市 )</string>
    <string name="user_address">户籍详细地址</string>
    <string name="user_marriage">婚姻状况</string>
    <!-- user demands -->
    <string name="user_demands_title">需求信息</string>
    <string name="user_loan_amount">贷款金额 ( 万元 )</string>
    <string name="user_loan_term">贷款期限 ( 个月 )</string>
    <string name="user_loan_use_time">用款时间</string>
    <string name="user_loan_reason">贷款用途</string>
    <string name="user_payment_source">还款来源</string>
    <string name="user_payment_way">还款方式</string>
    <!-- user ids -->
    <string name="user_identity_title">身份信息</string>
    <string name="user_identity">身份</string>
    <string name="user_identity_company_type">就职公司类型</string>
    <string name="user_identity_company_name">就职公司名称</string>
    <string name="user_identity_position">职位</string>
    <string name="user_identity_company_worktime">现单位工龄</string>
    <string name="user_identity_work_province">工作地 ( 省 )</string>
    <string name="user_identity_work_city">工作地 ( 市 )</string>
    <string name="user_identity_work_address">工作详细地址</string>
    <string name="user_identity_income_payment">收入发放方式</string>
    <string name="user_identity_salary_month_card">月打卡工资 ( 元 )</string>
    <string name="user_identity_salary_month_total">月均总收入 ( 元 )</string>
    <string name="user_identity_income_proof">能否提供收入证明</string>
    <string name="user_identity_social_fund">社保和公积金</string>
    <string name="user_identity_fund_years">公积金连续缴纳年限</string>
    <string name="user_identity_social_years">社保连续缴纳年限</string>
    <string name="user_identity_avocation">有无副业</string>
    <!-- user credit -->
    <string name="user_credit_title">信用信息</string>
    <string name="user_credit_station">信用情况</string>
    <string name="user_credit_amount">信用卡总额度</string>
    <string name="user_credit_count">信用卡张数 ( 张 )</string>
    <string name="user_credit_bank">发卡银行</string>
    <string name="user_credit_used_limit">已使用额度 ( 元 )</string>
    <string name="user_credit_debt">欠款情况</string>
    <!-- user house -->
    <string name="user_house_title">房产信息</string>
    <string name="user_house_station">名下房产情况</string>
    <!-- user car -->
    <string name="user_car_title">车产信息</string>
    <string name="user_car_property">名下车产情况</string>
    <!-- user other -->
    <string name="user_other_title">其它资产</string>
    <string name="user_other_name">其它资产名称</string>
    <string name="user_other_year">持有年限 ( 年 )</string>
    <string name="user_other_detail">资产详情</string>
    <string name="user_other_worth">市场价值 ( 万元 )</string>

</resources>
