<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:input="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.android.finance.ui.widget.CommonTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_loan_amount" />

        <com.android.finance.ui.widget.text.InputEditText
            android:id="@+id/amount"
            input:input_number="true"
            style="@style/financing_needs_more_right_edittext" />
    </LinearLayout>

    <LinearLayout
        style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_loan_term" />

        <com.android.finance.ui.widget.text.InputEditText
            android:id="@+id/term"
            input:input_number="true"
            input:input_limit="3"
            style="@style/financing_needs_more_right_edittext" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_loan_use_time" />

        <TextView
            android:id="@+id/time"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_loan_reason" />

        <TextView
            android:id="@+id/reason"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_payment_source" />

        <TextView
            android:id="@+id/paysource"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_payment_way" />

        <TextView
            android:id="@+id/payway"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>
</LinearLayout>