<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.android.finance.ui.widget.CommonTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_name" />

        <TextView
            android:id="@+id/name"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_year" />

        <TextView
            android:id="@+id/years"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_detail" />

        <TextView
            android:id="@+id/detail"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_worth" />

        <TextView
            android:id="@+id/worth"
            style="@style/financing_needs_more_right_arrow_text" />
    </LinearLayout>

</LinearLayout>