<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qtt.jinrong.ui.widget.CommonTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qtt.jinrong.ui.widget.IndicatorView
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ad_height" />

            <com.qtt.jinrong.ui.widget.LineView
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/btnLoanEnterprise"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/enterprise"
                    android:text="@string/recommend_loan_enterprise" />

                <TextView
                    android:id="@+id/btnLoanWorker"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/worker"
                    android:text="@string/recommend_loan_worker" />

                <TextView
                    android:id="@+id/btnLoanCredit"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/credit"
                    android:text="@string/recommend_loan_credit" />

                <TextView
                    android:id="@+id/btnMoreLoan"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/more"
                    android:text="@string/main_more" />

            </LinearLayout>

            <com.qtt.jinrong.ui.widget.LineView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/btnCreditCommon"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/enterprise"
                    android:text="@string/recommend_credit_common" />

                <TextView
                    android:id="@+id/btnCreditSilver"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/worker"
                    android:text="@string/recommend_credit_silver" />

                <TextView
                    android:id="@+id/btnCreditGold"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/credit"
                    android:text="@string/recommend_credit_gold" />

                <TextView
                    android:id="@+id/btnMoreCredit"
                    style="@style/recommend_btn_item"
                    android:drawableTop="@drawable/more"
                    android:text="@string/main_more" />

            </LinearLayout>
            <com.qtt.jinrong.ui.widget.LineView
                android:layout_width="match_parent"
                android:layout_height="1dp" />

        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>