<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:input="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <com.android.finance.ui.widget.text.InputEditText
            android:id="@+id/phoneEdit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            input:input_hint="@string/login_pwd_phone_hint"
            input:input_number="true"/>

        <com.android.finance.ui.widget.text.InputEditText
            android:id="@+id/pwdEdit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            input:input_hint="@string/login_pwd_hint"
            input:input_pwd="true"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/login_btn_text"
        android:background="@drawable/bg_orange_corner_selecter"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/btnForgetPwd"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/red_dark"
        android:textSize="14sp"
        android:text="@string/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>