<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:input="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qtt.jinrong.ui.widget.CommonTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_name" />

        <com.qtt.jinrong.ui.widget.text.InputEditText
            android:id="@+id/name"
            style="@style/financing_needs_more_right_edittext" />
    </LinearLayout>

    <com.qtt.jinrong.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_year" />

        <com.qtt.jinrong.ui.widget.text.InputEditText
            android:id="@+id/years"
            style="@style/financing_needs_more_right_edittext"
            input:input_number="true" />
    </LinearLayout>

    <com.qtt.jinrong.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_detail" />

        <com.qtt.jinrong.ui.widget.text.InputEditText
            android:id="@+id/detail"
            style="@style/financing_needs_more_right_edittext" />
    </LinearLayout>

    <com.qtt.jinrong.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout style="@style/financing_needs_more_item">

        <TextView
            style="@style/financing_needs_more_left_text"
            android:text="@string/user_other_worth" />

        <com.qtt.jinrong.ui.widget.text.InputEditText
            android:id="@+id/worth"
            style="@style/financing_needs_more_right_edittext"
            input:input_number="true" />
    </LinearLayout>

    <com.qtt.jinrong.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>